* Change name of IS_MOBILE_MEDIA_QUERY to MOBILE_MEDIA_QUERY * Tweak font size and line height of Code * Include debounce util in Common, change references to use Common.util.debounce * Prevent vertical scrollbars in MathEquation

--- a/packages/obonode/obojobo-chunks-code/viewer-component.scss
+++ b/packages/obonode/obojobo-chunks-code/viewer-component.scss
@@ -3,12 +3,12 @@
 .obojobo-draft--chunks--code,
 .component[data-obo-component='true'] .obojobo-draft--chunks--code {
 	pre {
-		$font-size: 0.9em;
+		$font-size: 0.95em;
 
 		font-family: $font-monospace;
 		letter-spacing: -0.01em;
-		line-height: 1.2em;
 		font-size: $font-size;
+		line-height: 1.4em;
 		margin-top: 0;
 		margin-bottom: 0;
 		overflow-x: auto;
